# rust-tokio-command-phonic

./: Cargo.toml  README.md  commands.txt  justfile  real-commands.txt
src/: main.rs
